# AgentEvac

./: .gitignore  CLAUDE.md  README.md  Spawn_Events.py  Traci_GPT2.py  agent_state.py  belief_model.py  calibration.py  departure_model.py  experiments.py  forecast_layer.py  information_model.py  metrics.py  pyproject.toml  replay.py  routing_utility.py  scenarios.py  scratch.py  study_runner.py
.github/workflows/: bump-and-release.yml  docker.yml
agentevac/agents/: agent_state.py  belief_model.py  departure_model.py  information_model.py  neighborhood_observation.py  scenarios.py  (+1 more)
scripts/: __init__.py  _plot_common.py  plot_agent_communication.py  plot_agent_round_timeline.py  plot_all_run_artifacts.py  plot_departure_timeline.py  plot_experiment_comparison.py  plot_run_metrics.py  run_rq1_info_quality.sh  run_rq2_social_trust.sh  run_rq3_pareto.sh  run_rq4_heterogeneity.sh  run_stage0_pilot.sh  run_stage1_scenarios.sh  run_stage2_uncertainty.sh  run_stage3_trust_messaging.sh  run_stage4_calibration.sh  run_stage5_refine_calibration.sh
sumo/: Repaired.net.xml  Repaired.netecfg  Repaired.rou.xml  Repaired.sumocfg
tests/: test_agent_state.py  test_belief_model.py  test_departure_model.py  test_experiment_stage_scripts.py  test_forecast_layer.py  test_information_model.py  test_metrics.py  test_neighborhood_observation.py  test_plot_agent_communication.py  test_plot_agent_round_timeline.py  test_plot_all_run_artifacts.py  test_plot_experiment_comparison.py  test_plot_run_metrics.py  test_replay.py  test_routing_utility.py  test_run_parameters.py  test_scenarios.py
(+7 files in other folders)
